# dox

./: .gitignore  CHANGELOG.md  DocxLite.html  README.md  app.js  build.js  docx.worker.js  dx.bat  index.html  khipu-codex-plan.md  style.css
.atl/: skill-registry.md
openspec/: README.md  config.yaml
openspec/changes/archive/2026-05-29-fase-1a-fixes-rapidos/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-29-fase-1a-fixes-rapidos/specs/app-core/: spec.md
openspec/changes/archive/2026-05-29-fase-1a-fixes-rapidos/specs/maintenance/: spec.md
openspec/changes/archive/2026-05-29-fase-1b-guardar-md/: proposal.md
openspec/changes/archive/2026-05-29-fase-2-marked-js/: proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-29-fase-3-modulos-es/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-29-fase-4-annotation-layer/: proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-29-fase-5-visor-svg/: proposal.md  tasks.md  verify-report.md
public/: app.js  docx.worker.js  index.html  style.css
src/: annotation.js  constants.js  dom-refs.js  file-handler.js  keyboard.js  main.js  markdown.js  progress.js  scroller.js  search.js  sectionizer.js  svg-viewer.js  tabs.js  theme.js  window.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
