[package]
name = "app"
version = "0.2.0"
description = "DocxLite - Visor ultraligero de documentos DOCX"
authors = ["Maudev"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1.6", features = [ "dialog-all", "window-all", "shell-open", "fs-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
